syntax = "proto3";

package authentication;

service Authentication {
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
    rpc SignIn(SignInRequest) returns (SignInResponse);
    rpc SignOut(SignOutRequest) returns (SignOutResponse);
}

message SignUpRequest {
    string username = 1;
    string password = 2;
}

message SignUpResponse {
    StatusCode status_code = 1;
}

message SignInRequest {
    string username = 1;
    string password = 2;
}

message SignInResponse {
    StatusCode status_code = 1;
    string user_id = 2;
    string session_token = 3;
}

message SignOutRequest {
    string session_token = 1;
}

message SignOutResponse {
    StatusCode status_code = 1;
}

enum StatusCode {
    FAILURE = 0;
    SUCCESS = 1;
}
